--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
-module.exports = {
+{
   "parser": "babel-eslint",
   "env": {
     "browser": true,
@@ -23,6 +23,6 @@ module.exports = {
   "extends": "airbnb",
   "rules": {
     "react/jsx-filename-extension": 0,
-    "function-paren-newline": 0,
+    "function-paren-newline": 0
   }
-};
+}
