--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,8 @@
   "extends": "airbnb",
   "rules": {
     "react/jsx-filename-extension": 0,
-    "function-paren-newline": 0
+    "function-paren-newline": 0,
+    "react/jsx-one-expression-per-line": "off",
+    "space-before-function-paren": "off",
   }
 }
