--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
+    "redux-localstorage-simple": "^2.1.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.3"
