--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
     "function-paren-newline": 0,
     "react/jsx-one-expression-per-line": "off",
     "space-before-function-paren": "off",
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "no-shadow": "off"
   }
 }
